--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
             </div>
             <div class="button-group">
                 <a><button class="button-from-header">Home</button></a>
-                <a href="./components/assets/pages/categories.html"><button class="button-from-header">Categories</button></a>
+                <a href="./components/assets/pages/categories.html"><button
+                        class="button-from-header">Categories</button></a>
                 <a href="./components/assets/pages/search.html"><button class="button-from-header">Search</button></a>
-                <a href="./components/assets/pages/legal.html"><button class="button-from-header">Legal Info</button></a>
+                <a href="./components/assets/pages/legal.html"><button class="button-from-header">Legal
+                        Info</button></a>
             </div>
         </div>
     </header>
